--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@barksh/bark-design-react": "^1.8.2",
         "@barksh/client-authentication-browser": "^1.6.3",
         "@barksh/token-browser": "^1.3.2",
+        "@sudoo/locale": "^1.0.1",
         "@sudoo/magic": "^1.9.0",
         "@sudoo/react-force": "^2.0.0",
         "connor": "^2.8.0",
