add dynamic client domain

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: "yarn"
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Install Dependencies
@@ -29,7 +33,10 @@ jobs:
           sudoo-build install
       - name: Build Project
         run: |
+          echo "Using VITE_CLIENT_DOMAIN: $VITE_CLIENT_DOMAIN"
           yarn run build
+        env:
+          VITE_CLIENT_DOMAIN: ${{ vars.VITE_CLIENT_DOMAIN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
