--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "description": "Phrase UI for Bark",
     "scripts": {
-        "dev": "vite",
+        "dev": "export VITE_CLIENT_DOMAIN=\"phrase.bark.sh\" && vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
