--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,16 +17,17 @@ jobs:
           - ubuntu-latest
           - windows-latest
         node-version:
-          - 16
+          - 18
         architecture:
           - x64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           architecture: ${{ matrix.architecture }}
+          cache: "yarn"
       - name: Install Dependencies
         run: |
           npm install @sudoo/build-cli -g
